the third commit

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
                     <p>嗨易凱! 祝你十七歲生日快樂! <br> - 希望你可以不客氣地開更多黃腔 <br> - 跟女友長久 <br> - 不要整天都想要色色 >_< <br> - 祝我籃球單挑可以贏你 ...</p>
                     <button>Read More</button>
                     <div class="media-icons">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linked-in"></i></a>
+                        <a href="https://cn.pornhub.com/" target="_blank"><img src="./facebook.png" style="height: 50px; width: 50px;" ></a>
+                        <a href="https://www.instagram.com/victor_daily_life/" target="_blank"><img src="./instagram.png" style="height: 50px; width: 50px;" ></a>
+                        <a href="https://www.xvideos.com/" target="_blank"><img src="./twitter.png"  style="height: 50px; width: 50px;" ></a>
                     </div>
                 </div>
-
             </div>
         </div>
 
